Attempt to make bazel build pass